--- a/package.json
+++ b/package.json
@@ -5,5 +5,22 @@
   "main": "index.js",
   "repository": "https://github.com/mintlib66/movie-ql",
   "author": "hy",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "graphql-yoga": "^1.18.3",
+    "node-fetch": "^3.2.3"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "babel-node": "^0.0.1-security"
+  },
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "type": "module"
 }
